src/modules/commons/components/base-list/base-list.scss
@import "src/styles/theme";

table {
  width: 100%;
  table-layout: fixed;
}

.mat-column-select {
  flex: 0 0 1%;
  width: 1%;
}

.mat-column-name, .mat-column-description {
  flex: 0 0 35%;
  width: 35%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-right: 15px;
}

.mat-column-name:hover, .mat-column-description:hover {
  white-space: normal;
  word-break: break-word;
}

.mat-column-extra {
  flex: 0 0 5%;
  width: 5%;
}

.mat-column-action {
  flex: 0 0 24%;
  width: 24%;
  text-align: right;
  white-space: nowrap;
}

.row-checked {
  background-color: lighten($dark-focused, 50%);
}

.row-selected {
  background-color: $dark-focused;
}

.row-disabled .mat-cell {
  color: $warn;
}

.mat-row.row-selected:hover {
  background-color: $dark-focused;
  cursor: pointer;
}

.mat-row:hover {
  background-color: lighten($dark-focused, 50%);
  cursor: pointer;
}

.mat-row.no-interaction {
  cursor: default;
  background-color: inherit;
}

.checkbox-padding {
  padding-right: 16px;
}

.action-cell {
  text-align: right;
}

.actions {
  display: inline-block;
  opacity: 0;
}

.mat-row:hover .actions {
  opacity: 100;
}

